# gillespie-tutorial

./: .gitignore
rust/: Cargo.toml
rust/rscripts/notebooks/: plotting_rejection_sampling_sir_mf.R
rust/src/: lib.rs
