[package]
name = "gillespie-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
rand = { version = "0.8.5", features = [
    "min_const_gen",
    # "packed_simd",
    # "simd_support",
] }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
tabled = "0.10.0"
